@@ -40,7 +40,6 @@ trait {{ServiceName}}[+MM[_]] {{#genericParent}}extends {{genericParent}} {{/gen
 {{/genericFunctions}}
 }
 
-
 {{docstring}}
 object {{ServiceName}} { self =>
 
@@ -57,27 +56,26 @@ object {{ServiceName}} { self =>
 
 {{#withFinagle}}
 {{#generateServiceIface}}
+  trait BaseServiceIface extends {{#parent}}{{parent}}.BaseServiceIface{{/parent}}{{^parent}}ToThriftService{{/parent}} {
+{{#dedupedOwnFunctions}}
+    def {{dedupedFuncName}} : com.twitter.finagle.Service[self.{{funcObjectName}}.Args, self.{{funcObjectName}}.SuccessType]
+{{/dedupedOwnFunctions}}
+
+    {{#parent}}override {{/parent}}def toThriftService: ThriftService = new MethodIface(this)
+  }
+
   case class ServiceIface(
 {{#inheritedFunctions}}
-      {{funcName}} : com.twitter.finagle.Service[{{ParentServiceName}}.{{funcObjectName}}.Args, {{ParentServiceName}}.{{funcObjectName}}.Result]
+      {{funcName}} : com.twitter.finagle.Service[{{ParentServiceName}}.{{funcObjectName}}.Args, {{ParentServiceName}}.{{funcObjectName}}.SuccessType]
 {{/inheritedFunctions|,}}
   ) extends {{#parent}}{{parent}}.BaseServiceIface
     with {{/parent}}BaseServiceIface
-
-  // This is needed to support service inheritance.
-  trait BaseServiceIface extends {{#parent}}{{parent}}.BaseServiceIface{{/parent}}{{^parent}}ToThriftService{{/parent}} {
-{{#dedupedOwnFunctions}}
-    def {{dedupedFuncName}} : com.twitter.finagle.Service[self.{{funcObjectName}}.Args, self.{{funcObjectName}}.Result]
-{{/dedupedOwnFunctions}}
-
-    override def toThriftService: ThriftService = new MethodIface(this)
-  }
 
   implicit object ServiceIfaceBuilder
     extends com.twitter.finagle.thrift.ServiceIfaceBuilder[ServiceIface] {
       def newServiceIface(
         binaryService: com.twitter.finagle.Service[ThriftClientRequest, Array[Byte]],
-        pf: TProtocolFactory = Protocols.binaryFactory(),
+        pf: TProtocolFactory = com.twitter.finagle.thrift.Protocols.binaryFactory(),
         stats: com.twitter.finagle.stats.StatsReceiver
       ): ServiceIface =
         new ServiceIface(
@@ -88,12 +86,11 @@ object {{ServiceName}} { self =>
   }
 
   class MethodIface(serviceIface: BaseServiceIface)
-    extends {{#parent}}{{parent}}.MethodIface(serviceIface) with {{/parent}}{{ServiceName}}[Future] {
+    extends {{#parent}}{{parent}}.MethodIface(serviceIface)
+    with {{/parent}}{{ServiceName}}[Future] {
 {{#dedupedOwnFunctions}}
-    private[this] val __{{funcName}}_service =
-      ThriftServiceIface.resultFilter(self.{{funcObjectName}}) andThen serviceIface.{{dedupedFuncName}}
     def {{funcName}}({{fieldParams}}): Future[{{typeName}}] =
-      __{{funcName}}_service(self.{{funcObjectName}}.Args({{argNames}})){{^isVoid}}{{/isVoid}}{{#isVoid}}.unit{{/isVoid}}
+      serviceIface.{{dedupedFuncName}}(self.{{funcObjectName}}.Args({{argNames}})){{^isVoid}}{{/isVoid}}{{#isVoid}}.unit{{/isVoid}}
 {{/dedupedOwnFunctions}}
   }
 
@@ -137,31 +134,39 @@ object {{ServiceName}} { self =>
     type FunctionType = {{functionType}}
     type ServiceType = com.twitter.finagle.Service[Args, Result]
 
+    type ServiceIfaceServiceType = com.twitter.finagle.Service[Args, SuccessType]
+
+    def toServiceIfaceService(f: FunctionType): ServiceIfaceServiceType =
+      com.twitter.finagle.Service.mk { args: Args =>
+        f(args)
+      }
+
     private[this] val toResult = (res: SuccessType) => Result({{^isVoid}}Some(res){{/isVoid}})
 
-    def functionToService(f: FunctionType): ServiceType = {
+    def functionToService(f: FunctionType): ServiceType =
       com.twitter.finagle.Service.mk { args: Args =>
         f(args).map(toResult)
       }
-    }
 
     def serviceToFunction(svc: ServiceType): FunctionType = { args: Args =>
-      ThriftServiceIface.resultFilter(this).andThen(svc).apply(args)
+      com.twitter.finagle.thrift.ThriftServiceIface.resultFilter(this).andThen(svc).apply(args)
     }
 {{/withFinagle}}
 {{^withFinagle}}
     type FunctionType = Nothing
     type ServiceType = Nothing
+    type ServiceIfaceServiceType = Nothing
 
+    def toServiceIfaceService(f: FunctionType): ServiceIfaceServiceType = ???
     def functionToService(f: FunctionType): ServiceType = ???
     def serviceToFunction(svc: ServiceType): FunctionType = ???
 {{/withFinagle}}
 
-    val name = "{{originalFuncName}}"
-    val serviceName = "{{ServiceName}}"
+    val name: String = "{{originalFuncName}}"
+    val serviceName: String = "{{ServiceName}}"
     val argsCodec = Args
     val responseCodec = Result
-    val oneway = {{is_oneway}}
+    val oneway: Boolean = {{is_oneway}}
   }
 
   // Compatibility aliases.
@@ -174,7 +179,9 @@ object {{ServiceName}} { self =>
 {{/thriftFunctions}}
 
 {{#withFinagle}}
-  trait FutureIface extends {{#futureIfaceParent}}{{futureIfaceParent}} with {{/futureIfaceParent}}{{ServiceName}}[Future] {
+  trait FutureIface
+    extends {{#futureIfaceParent}}{{futureIfaceParent}}
+    with {{/futureIfaceParent}}{{ServiceName}}[Future] {
 {{#asyncFunctions}}
     {{>function}}
 {{/asyncFunctions}}
@@ -182,7 +189,7 @@ object {{ServiceName}} { self =>
 
   class FinagledClient(
       service: com.twitter.finagle.Service[ThriftClientRequest, Array[Byte]],
-      protocolFactory: TProtocolFactory = Protocols.binaryFactory(),
+      protocolFactory: org.apache.thrift.protocol.TProtocolFactory = Protocols.binaryFactory(),
       serviceName: String = "{{ServiceName}}",
       stats: com.twitter.finagle.stats.StatsReceiver = com.twitter.finagle.stats.NullStatsReceiver,
       responseClassifier: ctfs.ResponseClassifier = ctfs.ResponseClassifier.Default)
@@ -204,7 +211,7 @@ object {{ServiceName}} { self =>
 
   class FinagledService(
       iface: FutureIface,
-      protocolFactory: TProtocolFactory)
+      protocolFactory: org.apache.thrift.protocol.TProtocolFactory)
     extends {{ServiceName}}$FinagleService(
       iface,
       protocolFactory)
